objects/ASI_FOC_Free_Goods_Request__c.object
<CustomObject>
    <description>used by PR China FOC</description>
    <fields>
        <fullName>ASI_CRM_AB_Policy_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AB Policy Number</label>
        <referenceTo>ASI_CRM_Anti_Bribery__c</referenceTo>
        <relationshipLabel>Free Goods Request &amp; POSM</relationshipLabel>
        <relationshipName>Free_Goods_Request_POSM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_AP_Type__c</fullName>
        <defaultValue>true</defaultValue>
        <label>A&amp;P Type?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Auto_Generation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Generation?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Benchmark_ROI_Percent__c</fullName>
        <formula>ASI_CRM_Contract__r.ASI_CRM_SG_Target_Benchmark__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Benchmark ROI %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Branch__c</fullName>
        <label>Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Purpose_Description__c</fullName>
        <defaultValue>&quot;1&gt;   PRC Owned Event tasting:    #PRC owned Events tasting#&quot;&amp;BR()&amp;
&quot;2&gt;   3rd party event tie-in:    #3rd party Support &amp; cooperation#&quot;&amp;BR()&amp;
&quot;3&gt;   Product barter:    #Barter Service from vendors by products#&quot;&amp;BR()&amp;
&quot;4&gt;   Promotion Products to indirect sales outlet:    #Promotion for customers related to sales#&quot;&amp;BR()&amp;
&quot;5&gt;   PRC employee tasting:    #Annual dinner, kick start, team activity, training tasting…#&quot;&amp;BR()&amp;
&quot;6&gt;   Replacement Stock &amp; CIQ-Operation only:    #Cap, Label… damage, CIQ#&quot;&amp;BR()&amp;
&quot;7&gt;   Miscellaneous Internal usage:    #display, shooting, advertising, research, testing, Entertainment, MV…#&quot;&amp;BR()&amp;
&quot;8&gt;   Gifts to 3rd party:    #Gifts to business, organization rather than individual#&quot;&amp;BR()&amp;
&quot;9&gt;   Gifts to employees:    #Wedding, MAF, CNY#&quot;&amp;BR()&amp;
&quot;10&gt; Gifts to non-employees (individual):    #For example: Lucky draw, apply to IIT, additional 20% IIT cost#&quot;</defaultValue>
        <label>Purpose Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_eMail_Subject__c</fullName>
        <formula>IF( CONTAINS(RecordType.DeveloperName, &quot;ASI_FOC_CN_Free_Goods_Request_Read_Only&quot;) || CONTAINS(RecordType.DeveloperName, &quot;ASI_FOC_CN_Free_Goods_Request&quot;) || CONTAINS(RecordType.DeveloperName, &quot;ASI_FOC_CN_Request_and_Items_Read_Only&quot;), &quot;free goods&quot;, IF(CONTAINS(RecordType.DeveloperName, &quot;ASI_FOC_CN_POSM&quot;) || CONTAINS(RecordType.DeveloperName, &quot;ASI_FOC_CN_POSM_Read_Only&quot;), &quot;POP/POSM&quot;, &quot;&quot;))</formula>
        <label>eMail Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Contract_No_Original__c</fullName>
        <label>Contract No. (Original)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>(1 AND 2) OR 3</booleanFilter>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>SG FOC, SG POSM</value>
            </filterItems>
            <filterItems>
                <field>ASI_TH_CRM_Contract__c.ASI_CRM_CN_Outlet_WS__r.Id</field>
                <operation>equals</operation>
                <valueField>$Source.ASI_CRM_Outlet__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>SG FOC, SG POSM</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_TH_CRM_Contract__c</referenceTo>
        <relationshipLabel>Free Goods Request &amp; POSM</relationshipLabel>
        <relationshipName>Free_Goods_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Contracted_ROI_Percent__c</fullName>
        <formula>ASI_CRM_Contract__r.ASI_CRM_ROIFx__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contracted ROI %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Current_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_CRM_CN_FPtoCU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Date_From__c</fullName>
        <defaultValue>today()</defaultValue>
        <label>Date From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Date_To__c</fullName>
        <defaultValue>today()</defaultValue>
        <label>Date To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Delivery_Tel__c</fullName>
        <label>Delivery Tel</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Delivery_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delivery To</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR 3</booleanFilter>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>ASI CRM TW FOC Request Read-Only, ASI CRM TW POSM Request Read-Only, ASI CRM TW FOC Request, ASI CRM TW POSM Request</value>
            </filterItems>
            <filterItems>
                <field>Account.ASI_HK_CRM_Inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>ASI CRM TW FOC Request Read-Only, ASI CRM TW POSM Request Read-Only, ASI CRM TW FOC Request, ASI CRM TW POSM Request</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Free Goods Request &amp; POSM (Delivery To)</relationshipLabel>
        <relationshipName>Free_Goods_Requests3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Department__c</fullName>
        <formula>ASI_CRM_Requester__r.Department</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_FOC_Amount__c</fullName>
        <label>FOC Amount</label>
        <summarizedField>ASI_FOC_Request_Item__c.ASI_CRM_TW_Amount__c</summarizedField>
        <summaryForeignKey>ASI_FOC_Request_Item__c.ASI_FOC_Request_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_FOC_Amount_w_o_A_D__c</fullName>
        <label>FOC Amount (A&amp;P)</label>
        <summarizedField>ASI_FOC_Request_Item__c.ASI_CRM_TW_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>ASI_FOC_Request_Item__c.ASI_CRM_A_D_or_A_P__c</field>
            <operation>notEqual</operation>
            <value>A&amp;D</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_FOC_Request_Item__c.ASI_FOC_Request_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JDE_SO_Number__c</fullName>
        <label>JDE SO Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_Display_Price__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If ticked, system will display Min SP in the FOC Claim Report</inlineHelpText>
        <label>Display Price?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_Event_Period__c</fullName>
        <label>Event Period</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_Exceed_AP_Entitled_Amt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exceed A&amp;P Entitled Amount?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_JDE_SO_Type__c</fullName>
        <label>JDE SO Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SY</fullName>
                    <label>SY-Barter Trade GST</label>
                </value>
                <value>
                    <fullName>SN</fullName>
                    <label>SN-Barter Trade Non-GST</label>
                </value>
                <value>
                    <fullName>J5</fullName>
                    <label>J5-Free Issue</label>
                </value>
                <value>
                    <fullName>SG</fullName>
                    <label>SG-Free Issue</label>
                </value>
                <value>
                    <fullName>P5</fullName>
                    <label>P5-Free Issue</label>
                </value>
                <value>
                    <fullName>K5</fullName>
                    <label>K5-Free Issue</label>
                </value>
                <value>
                    <fullName>M5</fullName>
                    <label>M5-Free Issue</label>
                </value>
                <value>
                    <fullName>I5</fullName>
                    <label>I5-Free Issue</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Month__c</fullName>
        <formula>IF(
MONTH(ASI_FOC_Date_of_Delivery__c) &lt; 10, 
&apos;0&apos; + TEXT(MONTH(ASI_FOC_Date_of_Delivery__c)), 
TEXT(MONTH(ASI_FOC_Date_of_Delivery__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_No_of_Detail_Line__c</fullName>
        <label>No. of Detail Line</label>
        <summaryForeignKey>ASI_FOC_Request_Item__c.ASI_FOC_Request_Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet_Invoice_Number__c</fullName>
        <label>Outlet Invoice Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outlet</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR (3) OR (4 AND 5) OR (6 AND 7)</booleanFilter>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>SG FOC, SG POSM</value>
            </filterItems>
            <filterItems>
                <field>ASI_CRM_AccountsAdditionalField__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Outlet (SG)</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>SG FOC, SG POSM, MY FOC Free Goods Request, CN POSM</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>MY FOC Free Goods Request</value>
            </filterItems>
            <filterItems>
                <field>ASI_CRM_AccountsAdditionalField__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Outlet (MY), Wholesaler (MY), Potential Outlet (MY)</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN POSM</value>
            </filterItems>
            <filterItems>
                <field>ASI_CRM_AccountsAdditionalField__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Wholesaler (CN), Outlet (CN)</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Free Goods Request &amp; POSM</relationshipLabel>
        <relationshipName>Free_Goods_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR 3</booleanFilter>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>ASI CRM TW FOC Request, ASI CRM TW POSM Request</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_Plan__c.ASI_MFM_Status__c</field>
                <operation>equals</operation>
                <value>Final</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>ASI CRM TW FOC Request, ASI CRM TW POSM Request</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_Plan__c</referenceTo>
        <relationshipLabel>Free Goods Request &amp; POSM</relationshipLabel>
        <relationshipName>Free_Goods_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Purpose__c</fullName>
        <label>Purpose</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Receiver__c</fullName>
        <label>Receiver</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Record_Type_Developer_Name__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Developer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Reference_No__c</fullName>
        <label>Reference No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Request_Number__c</fullName>
        <label>Request Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Requester_Contact_No__c</fullName>
        <formula>ASI_CRM_Requester__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requester Contact No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Requester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Free_Goods_Requester</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Revised_ROI_Percent__c</fullName>
        <formula>ASI_CRM_Contract__r.ASI_CRM_ROI_Percent_Revised__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YTD ROI %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Delivery_Address__c</fullName>
        <label>Delivery Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Delivery_Charge__c</fullName>
        <label>Delivery Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Delivery_Instructions__c</fullName>
        <label>Delivery Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_FOC_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FOC Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_FOC_Type__c</fullName>
        <label>FOC Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Incentive</fullName>
                </value>
                <value>
                    <fullName>Management Incentives</fullName>
                </value>
                <value>
                    <fullName>Contract Sponsorship/Target Incentive</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Events</fullName>
                </value>
                <value>
                    <fullName>Signages / Advertising Spot</fullName>
                </value>
                <value>
                    <fullName>Anniversary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Has_Advertising_Spot__c</fullName>
        <label>Has Advertising Spot</label>
        <summaryFilterItems>
            <field>ASI_FOC_Request_Item__c.ASI_CRM_SG_FOC_Type__c</field>
            <operation>equals</operation>
            <value>Advertising Spot</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_FOC_Request_Item__c.ASI_FOC_Request_Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Has_Signages__c</fullName>
        <label>Has Signages</label>
        <summaryFilterItems>
            <field>ASI_FOC_Request_Item__c.ASI_CRM_SG_FOC_Type__c</field>
            <operation>equals</operation>
            <value>Signages New - TOT,  Signages New - MOT</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_FOC_Request_Item__c.ASI_FOC_Request_Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Month__c</fullName>
        <label>Month</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Order_Date__c</fullName>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Sys_Changes__c</fullName>
        <label>Sys Changes</label>
        <summaryFilterItems>
            <field>ASI_FOC_Request_Item__c.ASI_SG_CRM_SYS_Changed__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_FOC_Request_Item__c.ASI_FOC_Request_Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_System_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SYS System Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Target_Benchmark_Threshold__c</fullName>
        <formula>ASI_CRM_Contract__r.ASI_CRM_SG_Target_Benchmark_Threshold__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Benchmark Threshold</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Total_Amount__c</fullName>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Year__c</fullName>
        <label>Year</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SYS_Key_Year_Month__c</fullName>
        <formula>ASI_CRM_SG_Year__c + &apos;_&apos; +  ASI_CRM_SG_Month__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SYS Key Year_Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sampling_Approval_Level__c</fullName>
        <label>Sampling Approval Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Not Converted</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
                <value>
                    <fullName>Submit for Cancel</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sync_to_JDE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync to JDE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_System_Remark__c</fullName>
        <label>System Remark</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Target_Outlet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target Outlet</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR 3</booleanFilter>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>ASI CRM TW FOC Request Read-Only, ASI CRM TW POSM Request Read-Only, ASI CRM TW FOC Request, ASI CRM TW POSM Request</value>
            </filterItems>
            <filterItems>
                <field>Account.ASI_HK_CRM_Inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>ASI CRM TW FOC Request Read-Only, ASI CRM TW POSM Request Read-Only, ASI CRM TW FOC Request, ASI CRM TW POSM Request</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Free Goods Request &amp; POSM (Target Outlet)</relationshipLabel>
        <relationshipName>Free_Goods_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Actual_Quantity_9L__c</fullName>
        <label>Total Actual Quantity (9L)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Bottle_Value__c</fullName>
        <label>Total Bottle Value</label>
        <summarizedField>ASI_FOC_Request_Item__c.ASI_CRM_Bottle_Value__c</summarizedField>
        <summaryFilterItems>
            <field>ASI_FOC_Request_Item__c.ASI_CRM_Bottle_Value__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_FOC_Request_Item__c.ASI_FOC_Request_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Cost__c</fullName>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Issued_Qty__c</fullName>
        <label>Total Issued Qty</label>
        <summarizedField>ASI_FOC_Request_Item__c.ASI_FOC_Issued_Qty__c</summarizedField>
        <summaryForeignKey>ASI_FOC_Request_Item__c.ASI_FOC_Request_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Year__c</fullName>
        <formula>TEXT(YEAR(ASI_FOC_Date_of_Delivery__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Account_DA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account (DA)</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
            <errorMessage>Please select correct Account (DA)</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Outlet (HK), JDE Salesman Cash Account (HK)</value>
            </filterItems>
            <filterItems>
                <field>Account.ASI_HK_CRM_IsDeliveryAccount__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Account.ASI_HK_CRM_Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>Account.ASI_HK_CRM_Location__c</field>
                <operation>notEqual</operation>
                <value>#_MACDPLOC</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Free Goods Request &amp; POSM</relationshipLabel>
        <relationshipName>Free_Goods_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Actual_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Actual Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Alternate_Delivery_Address_Floor__c</fullName>
        <label>Alternate Delivery Address Floor</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Apply_Tax_Saving_Logic__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Apply Tax Saving Logic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Approval_In_Progress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval In Progress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Free_Goods_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Free_Goods_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Free_Goods_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Attention__c</fullName>
        <label>Attention</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Budget_Amount__c</fullName>
        <description>HK FOC Logic: If JDE Order Type is CS, then whole FOC cost = $0</description>
        <formula>IF (CONTAINS(RecordType.DeveloperName,&quot;ASI_FOC_HK&quot;), 
	IF(ASI_FOC_Actual_Amount__c &gt; 0, ASI_FOC_Actual_Amount__c, IF(ASI_FOC_Order_Status__c=&quot;CS&quot;, 0, ASI_FOC_Free_Goods_Total_Cost__c)),
	IF(ASI_FOC_Actual_Amount__c &gt; 0, ASI_FOC_Actual_Amount__c, ASI_FOC_Free_Goods_Total_Cost__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Building__c</fullName>
        <label>Building</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_CN_Already_4_Days__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Already 4 Days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_CN_Delivery_Zone__c</fullName>
        <label>Delivery Zone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Shanghai - Beihai</fullName>
                </value>
                <value>
                    <fullName>Shanghai - Beijing</fullName>
                </value>
                <value>
                    <fullName>Shanghai - Changsha</fullName>
                </value>
                <value>
                    <fullName>Shanghai - Chengdu</fullName>
                </value>
                <value>
                    <fullName>Shanghai - Chongqing</fullName>
                </value>
                <value>
                    <fullName>Shanghai - Dalian</fullName>
                </value>
                <value>
                    <fullName>Shanghai - Foshan</fullName>
                </value>
                <value>
                    <fullName>Shanghai - Fuzhou</fullName>
                </value>
                <value>
                    <fullName>Shanghai - Ganzhou</fullName>
                </value>
                <value>
                    <fullName>Shanghai - Guangzhou</fullName>
                </value>
                <value>
                    <fullName>Shanghai - Guiyang</fullName>
                </value>
                <value>
                    <fullName>Shanghai - Haikou</fullName>
                </value>
                <value>
                    <fullName>Shanghai - Hangzhou</fullName>
                </value>
                <value>
                    <fullName>Shanghai - Harbin</fullName>
                </value>
                <value>
                    <fullName>Shanghai - Hefei</fullName>
                </value>
                <value>
                    <fullName>Shanghai - Jiangmen</fullName>
                </value>
                <value>
                    <fullName>Shanghai - Jiaxing</fullName>
                </value>
                <value>
                    <fullName>Shanghai - Jinan</fullName>
                </value>
                <value>
                    <fullName>Shanghai - Jinjiang</fullName>
                </value>
                <value>
                    <fullName>Shanghai - Kunming</fullName>
                </value>
                <value>
                    <fullName>Shanghai - Leqing</fullName>
                </value>
                <value>
                    <fullName>Shanghai - Nanchang</fullName>
                </value>
                <value>
                    <fullName>Shanghai - Nanjing</fullName>
                </value>
                <value>
                    <fullName>Shanghai - Nanning</fullName>
                </value>
                <value>
                    <fullName>Shanghai - Ningbo</fullName>
                </value>
                <value>
                    <fullName>Shanghai - Qingdao</fullName>
                </value>
                <value>
                    <fullName>Shanghai - Quangzhou</fullName>
                </value>
                <value>
                    <fullName>Shanghai - Sanming</fullName>
                </value>
                <value>
                    <fullName>Shanghai - Shanghai</fullName>
                </value>
                <value>
                    <fullName>Shanghai - Shantou</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_FOC_CN_Send_Reminder_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Reminder Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Company_Chop_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Company Chop Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Date_of_Delivery__c</fullName>
        <label>Request Arrival Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Deliver_to_Address_Line_1__c</fullName>
        <label>Deliver to Address Line 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
</CustomObject>